Disable generate manifest

--- a/winproject/mupen64/mupen64_2010.vcxproj
+++ b/winproject/mupen64/mupen64_2010.vcxproj
@@ -71,6 +71,9 @@
     <EmbedManifest>true</EmbedManifest>
     <GenerateManifest>false</GenerateManifest>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <GenerateManifest>false</GenerateManifest>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
