--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-winproject/mupen64/ipch/
-winproject/mupen64/obj/
-winproject/mupen64/bin/
-winproject/mupen64/mupen64_2010.sdf
-winproject/mupen64/mupen64_2010.suo
-winproject/mupen64/stdout.txt
-winproject/mupen64/stderr.txt
+winproject/mupen64/
 commit.txt
-
-winproject/mupen64/.vs/
+.gitignore
