Fix TASinput flicker, allow hiding behind other windows (introduces a bug)
It will now also hide behind mupen, needs to be fixed somehow

--- a/tasinput_plugin/src/config.rc
+++ b/tasinput_plugin/src/config.rc
@@ -257,8 +257,7 @@ BEGIN
     GROUPBOX        "X",IDC_STATICX,101,9,51,71
     GROUPBOX        "Y",IDC_STATICY,155,9,51,71
     GROUPBOX        "Analog Stick",IDC_ANALOGSTICKLABEL,3,0,208,97
-    CONTROL         "",IDC_STICKPIC,"Static",SS_BLACKFRAME | 
-                    SS_REALSIZEIMAGE,7,10,89,82,WS_EX_STATICEDGE
+    CONTROL         "",IDC_STICKPIC,"Static",SS_OWNERDRAW,7,10,89,82,WS_EX_STATICEDGE
     CONTROL         "Ang. Disp",IDC_CHECK_ANGDISP,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,160,59,42,10
 END
@@ -341,8 +340,7 @@ BEGIN
     GROUPBOX        "X",IDC_STATICX,101,9,51,71
     GROUPBOX        "Y",IDC_STATICY,155,9,51,71
     GROUPBOX        "Analog Stick",IDC_ANALOGSTICKLABEL,3,0,208,97
-    CONTROL         "",IDC_STICKPIC,"Static",SS_BLACKFRAME | 
-                    SS_REALSIZEIMAGE,7,10,89,82,WS_EX_STATICEDGE
+    CONTROL         "",IDC_STICKPIC,"Static",SS_OWNERDRAW,7,10,89,82,WS_EX_STATICEDGE
     GROUPBOX        "Buttons",IDC_BUTTONSLABEL,3,97,208,71
     GROUPBOX        "Combos - NOT YET IMPLEMENTED",IDC_COMBOLABEL,3,168,208,
                     147
@@ -457,8 +455,7 @@ BEGIN
     GROUPBOX        "X",IDC_STATICX,101,9,51,71
     GROUPBOX        "Y",IDC_STATICY,155,9,51,71
     GROUPBOX        "Analog Stick",IDC_ANALOGSTICKLABEL,3,0,208,97
-    CONTROL         "",IDC_STICKPIC,"Static",SS_BLACKFRAME | 
-                    SS_REALSIZEIMAGE,7,10,89,82,WS_EX_STATICEDGE
+    CONTROL         "",IDC_STICKPIC,"Static",SS_OWNERDRAW,7,10,89,82,WS_EX_STATICEDGE
     GROUPBOX        "Buttons",IDC_BUTTONSLABEL,3,97,208,71
     CONTROL         "Ang. Disp",IDC_CHECK_ANGDISP,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,160,59,42,10
@@ -512,8 +509,7 @@ BEGIN
     GROUPBOX        "X",IDC_STATICX,101,9,51,71
     GROUPBOX        "Y",IDC_STATICY,155,9,51,71
     GROUPBOX        "Analog Stick",IDC_ANALOGSTICKLABEL,3,0,208,97
-    CONTROL         "",IDC_STICKPIC,"Static",SS_BLACKFRAME | 
-                    SS_REALSIZEIMAGE,7,10,89,82,WS_EX_STATICEDGE
+    CONTROL         "",IDC_STICKPIC,"Static",SS_OWNERDRAW,7,10,89,82,WS_EX_STATICEDGE
     GROUPBOX        "Combos - NOT YET IMPLEMENTED",IDC_COMBOLABEL,3,97,208,
                     147
     PUSHBUTTON      "More...",IDC_MOREBUTTON1,155,82,51,11
