--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ commit.txt
 /tasinput_plugin/src/Release
 /tasinput_plugin/src/.vs
 /tasinput_plugin/src/UpgradeLog.htm
+/tasinput_plugin/src/stdout.txt
+/tasinput_plugin/src/config.aps
