More combo functions and changes to restart/close
Left to do: save to file, import from file, duplicate combo(?)

--- a/tasinput_plugin/src/config.rc
+++ b/tasinput_plugin/src/config.rc
@@ -189,13 +189,12 @@ STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_PO
 EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    COMBOBOX        IDC_MACROBOX,8,178,144,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LISTBOX         IDC_MACROLIST,8,194,143,116,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_MACROLIST,8,194,143,116, WS_CLIPSIBLINGS | LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Record",IDC_RECORD,156,194,51,14
     PUSHBUTTON      "Play",IDC_PLAY,156,211,51,14
     PUSHBUTTON      "Pause",IDC_PAUSE,156,228,51,14
     PUSHBUTTON      "Stop",IDC_STOP,156,245,51,14
-    PUSHBUTTON      "Compact",IDC_COMPACT,156,280,51,14
+    PUSHBUTTON      "Edit",IDC_EDIT,156,280,51,14
     PUSHBUTTON      "Clear",IDC_CLEAR,156,297,51,14
     PUSHBUTTON      "Hide...",IDC_MOREBUTTON5,156,177,51,13
     EDITTEXT        IDC_EDITX,113,15,37,14,ES_AUTOHSCROLL
@@ -312,14 +311,13 @@ STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_PO
 EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    COMBOBOX        IDC_MACROBOX,8,107,144,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LISTBOX         IDC_MACROLIST,8,123,143,116,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_MACROLIST,8,123,143,116, WS_CLIPSIBLINGS | LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Record",IDC_RECORD,156,123,51,14
     PUSHBUTTON      "Play",IDC_PLAY,156,140,51,14
     PUSHBUTTON      "Pause",IDC_PAUSE,156,157,51,14
     PUSHBUTTON      "Stop",IDC_STOP,156,174,51,14
     PUSHBUTTON      "Loop",IDC_LOOP,156,192,51,14
-    PUSHBUTTON      "Compact",IDC_COMPACT,156,209,51,14
+    PUSHBUTTON      "Edit",IDC_EDIT,156,209,51,14
     PUSHBUTTON      "Clear",IDC_CLEAR,156,226,51,14
     PUSHBUTTON      "Hide...",IDC_MOREBUTTON5,156,106,51,13
     EDITTEXT        IDC_EDITX,113,15,37,14,ES_AUTOHSCROLL
@@ -350,14 +348,13 @@ STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_PO
 EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    COMBOBOX        IDC_MACROBOX,8,10,144,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LISTBOX         IDC_MACROLIST,8,26,143,116,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_MACROLIST,8,26,143,116, WS_CLIPSIBLINGS | LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Record",IDC_RECORD,156,26,51,14
     PUSHBUTTON      "Play",IDC_PLAY,156,43,51,14
     PUSHBUTTON      "Pause",IDC_PAUSE,156,60,51,14
     PUSHBUTTON      "Stop",IDC_STOP,156,77,51,14
     PUSHBUTTON      "Loop",IDC_LOOP,156,95,51,14
-    PUSHBUTTON      "Compact",IDC_COMPACT,156,112,51,14
+    PUSHBUTTON      "Edit",IDC_EDIT,156,112,51,14
     PUSHBUTTON      "Clear",IDC_CLEAR,156,129,51,14
     PUSHBUTTON      "More...",IDC_MOREBUTTON6,156,9,51,13
     GROUPBOX        "Combos",IDC_COMBOLABEL,3,0,208,147
@@ -368,14 +365,13 @@ STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_PO
 EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    COMBOBOX        IDC_MACROBOX,8,81,144,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LISTBOX         IDC_MACROLIST,8,97,143,116,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_MACROLIST,8,97,143,116, WS_CLIPSIBLINGS | LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Record",IDC_RECORD,156,97,51,14
     PUSHBUTTON      "Play",IDC_PLAY,156,114,51,14
     PUSHBUTTON      "Pause",IDC_PAUSE,156,131,51,14
     PUSHBUTTON      "Stop",IDC_STOP,156,148,51,14
     PUSHBUTTON      "Loop",IDC_LOOP,156,166,51,14
-    PUSHBUTTON      "Compact",IDC_COMPACT,156,183,51,14
+    PUSHBUTTON      "Edit",IDC_EDIT,156,183,51,14
     PUSHBUTTON      "Clear",IDC_CLEAR,156,200,51,14
     PUSHBUTTON      "Hide...",IDC_MOREBUTTON5,156,80,51,13
     CONTROL         "L",IDC_CHECK_L,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,36,9,19,10
