--- a/tasinput_plugin/src/config.rc
+++ b/tasinput_plugin/src/config.rc
@@ -184,12 +184,12 @@ BEGIN
     CONTROL         "Ang. Disp",IDC_CHECK_ANGDISP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,160,59,42,10
 END
 
-IDD_STATUS_123 DIALOGEX 0, 0, 216, 319
+IDD_STATUS_123 DIALOGEX 0, 0, 216, 356
 STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE
 EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LISTBOX         IDC_MACROLIST,8,194,143,116, WS_CLIPSIBLINGS | LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_MACROLIST,8,196,143,151,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_CLIPSIBLINGS | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Record",IDC_RECORD,156,194,51,14
     PUSHBUTTON      "Play",IDC_PLAY,156,211,51,14
     PUSHBUTTON      "Pause",IDC_PAUSE,156,228,51,14
@@ -231,10 +231,13 @@ BEGIN
     GROUPBOX        "Y",IDC_STATICY,155,9,51,71
     GROUPBOX        "Analog Stick",IDC_ANALOGSTICKLABEL,3,0,208,97
     CONTROL         "",IDC_STICKPIC,"Static",SS_OWNERDRAW,7,10,89,82,WS_EX_STATICEDGE
-    GROUPBOX        "Buttons",IDC_BUTTONSLABEL,3,97,208,71
-    GROUPBOX        "Combos - NOT YET IMPLEMENTED",IDC_COMBOLABEL,3,168,208,147
+    GROUPBOX        "Buttons",IDC_BUTTONSLABEL,3,97,208,70
+    GROUPBOX        "Combos",IDC_COMBOLABEL,3,169,208,182
     CONTROL         "Ang. Disp",IDC_CHECK_ANGDISP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,160,59,42,10
     CONTROL         "Loop",IDC_LOOP,"Button",BS_AUTOCHECKBOX | BS_PUSHLIKE | WS_TABSTOP,156,262,51,14
+    PUSHBUTTON      "Import",IDC_IMPORT,156,315,51,14
+    PUSHBUTTON      "Save",IDC_SAVE,156,333,51,14
+    LTEXT           "Status: Idle",IDC_STATUS,8,183,143,11
 END
 
 IDD_STATUS_2 DIALOGEX 0, 0, 216, 75
@@ -311,7 +314,7 @@ STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_PO
 EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LISTBOX         IDC_MACROLIST,8,123,143,116, WS_CLIPSIBLINGS | LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_MACROLIST,8,123,143,116,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_CLIPSIBLINGS | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Record",IDC_RECORD,156,123,51,14
     PUSHBUTTON      "Play",IDC_PLAY,156,140,51,14
     PUSHBUTTON      "Pause",IDC_PAUSE,156,157,51,14
@@ -348,7 +351,7 @@ STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_PO
 EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LISTBOX         IDC_MACROLIST,8,26,143,116, WS_CLIPSIBLINGS | LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_MACROLIST,8,26,143,116,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_CLIPSIBLINGS | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Record",IDC_RECORD,156,26,51,14
     PUSHBUTTON      "Play",IDC_PLAY,156,43,51,14
     PUSHBUTTON      "Pause",IDC_PAUSE,156,60,51,14
@@ -365,7 +368,7 @@ STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_PO
 EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LISTBOX         IDC_MACROLIST,8,97,143,116, WS_CLIPSIBLINGS | LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_MACROLIST,8,97,143,116,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_CLIPSIBLINGS | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Record",IDC_RECORD,156,97,51,14
     PUSHBUTTON      "Play",IDC_PLAY,156,114,51,14
     PUSHBUTTON      "Pause",IDC_PAUSE,156,131,51,14
@@ -429,7 +432,7 @@ BEGIN
     IDD_STATUS_123, DIALOG
     BEGIN
         RIGHTMARGIN, 214
-        BOTTOMMARGIN, 317
+        BOTTOMMARGIN, 354
     END
 
     IDD_STATUS_2, DIALOG
