TASinput now shows on taskbar (this solves some issues)
Now OBS can record tasinput properly and its easy to bring it back to top when its behind other window (due to older fix)

--- a/tasinput_plugin/src/config.rc
+++ b/tasinput_plugin/src/config.rc
@@ -159,8 +159,8 @@ BEGIN
 END
 
 IDD_STATUS_1 DIALOGEX 0, 0, 216, 102
-STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE
-EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE
+STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE
+EXSTYLE WS_EX_STATICEDGE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     EDITTEXT        IDC_EDITX,113,15,37,14,ES_AUTOHSCROLL
@@ -183,8 +183,8 @@ BEGIN
 END
 
 IDD_STATUS_123 DIALOGEX 0, 0, 216, 356
-STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE
-EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE
+STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE
+EXSTYLE WS_EX_STATICEDGE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LISTBOX         IDC_MACROLIST,8,196,143,151,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_CLIPSIBLINGS | WS_VSCROLL | WS_TABSTOP
@@ -237,8 +237,8 @@ BEGIN
 END
 
 IDD_STATUS_2 DIALOGEX 0, 0, 216, 75
-STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE
-EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE
+STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE
+EXSTYLE WS_EX_STATICEDGE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     GROUPBOX        "Buttons",IDC_BUTTONSLABEL,3,0,208,71
@@ -262,8 +262,8 @@ BEGIN
 END
 
 IDD_STATUS_12 DIALOGEX 0, 0, 216, 172
-STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE
-EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE
+STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE
+EXSTYLE WS_EX_STATICEDGE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     EDITTEXT        IDC_EDITX,113,15,37,14,ES_AUTOHSCROLL
@@ -304,8 +304,8 @@ BEGIN
 END
 
 IDD_STATUS_13 DIALOGEX 0, 0, 216, 279
-STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE
-EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE
+STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE
+EXSTYLE WS_EX_STATICEDGE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LISTBOX         IDC_MACROLIST,8,123,143,148,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_CLIPSIBLINGS | WS_VSCROLL | WS_TABSTOP
@@ -342,8 +342,8 @@ BEGIN
 END
 
 IDD_STATUS_3 DIALOGEX 0, 0, 216, 185
-STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE
-EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE
+STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE
+EXSTYLE WS_EX_STATICEDGE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LISTBOX         IDC_MACROLIST,8,26,143,151,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_CLIPSIBLINGS | WS_VSCROLL | WS_TABSTOP
@@ -362,8 +362,8 @@ BEGIN
 END
 
 IDD_STATUS_23 DIALOGEX 0, 0, 216, 255
-STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE
-EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE
+STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE
+EXSTYLE WS_EX_STATICEDGE
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LISTBOX         IDC_MACROLIST,8,97,143,150,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_CLIPSIBLINGS | WS_VSCROLL | WS_TABSTOP
