--- a/tasinput_plugin/src/config.rc
+++ b/tasinput_plugin/src/config.rc
@@ -170,16 +170,18 @@ BEGIN
     CONTROL         "Instant",IDC_XABS,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,105,31,39,10
     CONTROL         "Semi-Rel",IDC_XSEM,"Button",BS_AUTORADIOBUTTON,105,40,43,10
     CONTROL         "Relative",IDC_XREL,"Button",BS_AUTORADIOBUTTON,105,50,42,10
+    CONTROL         "Radial",IDC_XRAD,"Button",BS_AUTORADIOBUTTON,105,59,35,10
     CONTROL         "Instant",IDC_YABS,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,159,31,39,10
     CONTROL         "Semi-Rel",IDC_YSEM,"Button",BS_AUTORADIOBUTTON,159,40,43,10
     CONTROL         "Relative",IDC_YREL,"Button",BS_AUTORADIOBUTTON,159,50,42,10
+    CONTROL         "",IDC_SLIDERX,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,102,68,49,11
+    CONTROL         "",IDC_SLIDERY,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,156,68,49,11
     PUSHBUTTON      "More...",IDC_MOREBUTTON1,101,82,105,11
     GROUPBOX        "X",IDC_STATICX,101,9,51,71
     GROUPBOX        "Y",IDC_STATICY,155,9,51,71
     GROUPBOX        "Analog Stick",IDC_ANALOGSTICKLABEL,3,0,208,97
     CONTROL         "",IDC_STICKPIC,"Static",SS_OWNERDRAW,7,10,89,82,WS_EX_STATICEDGE
-    CONTROL         "Radial",IDC_XRAD,"Button",BS_AUTORADIOBUTTON,159,60,35,10
-    CONTROL         "Ang. Disp",IDC_CHECK_ANGDISP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,106,66,42,10
+    CONTROL         "Ang. Disp",IDC_CHECK_ANGDISP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,160,59,42,10
 END
 
 IDD_STATUS_123 DIALOGEX 0, 0, 216, 356
@@ -202,9 +204,12 @@ BEGIN
     CONTROL         "Instant",IDC_XABS,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,105,31,39,10
     CONTROL         "Semi-Rel",IDC_XSEM,"Button",BS_AUTORADIOBUTTON,105,40,43,10
     CONTROL         "Relative",IDC_XREL,"Button",BS_AUTORADIOBUTTON,105,50,42,10
+    CONTROL         "Radial",IDC_XRAD,"Button",BS_AUTORADIOBUTTON,105,59,35,10
     CONTROL         "Instant",IDC_YABS,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,159,31,39,10
     CONTROL         "Semi-Rel",IDC_YSEM,"Button",BS_AUTORADIOBUTTON,159,40,43,10
     CONTROL         "Relative",IDC_YREL,"Button",BS_AUTORADIOBUTTON,159,50,42,10
+    CONTROL         "",IDC_SLIDERX,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,102,68,49,11
+    CONTROL         "",IDC_SLIDERY,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,156,68,49,11
     PUSHBUTTON      "Hide...",IDC_MOREBUTTON0,101,82,105,11
     CONTROL         "L",IDC_CHECK_L,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,36,106,19,10
     CONTROL         "R",IDC_CHECK_R,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,103,106,21,10
@@ -228,12 +233,11 @@ BEGIN
     CONTROL         "",IDC_STICKPIC,"Static",SS_OWNERDRAW,7,10,89,82,WS_EX_STATICEDGE
     GROUPBOX        "Buttons",IDC_BUTTONSLABEL,3,97,208,70
     GROUPBOX        "Combos",IDC_COMBOLABEL,3,169,208,182
+    CONTROL         "Ang. Disp",IDC_CHECK_ANGDISP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,160,59,42,10
     CONTROL         "Loop",IDC_LOOP,"Button",BS_AUTOCHECKBOX | BS_PUSHLIKE | WS_TABSTOP,156,262,51,14
     PUSHBUTTON      "Import",IDC_IMPORT,156,315,51,14
     PUSHBUTTON      "Save",IDC_SAVE,156,333,51,14
     LTEXT           "Status: Idle",IDC_STATUS,8,183,143,11
-    CONTROL         "Radial",IDC_XRAD,"Button",BS_AUTORADIOBUTTON,159,60,35,10
-    CONTROL         "Ang. Disp",IDC_CHECK_ANGDISP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,106,66,42,10
 END
 
 IDD_STATUS_2 DIALOGEX 0, 0, 216, 75
@@ -273,9 +277,12 @@ BEGIN
     CONTROL         "Instant",IDC_XABS,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,105,31,39,10
     CONTROL         "Semi-Rel",IDC_XSEM,"Button",BS_AUTORADIOBUTTON,105,40,43,10
     CONTROL         "Relative",IDC_XREL,"Button",BS_AUTORADIOBUTTON,105,50,42,10
+    CONTROL         "Radial",IDC_XRAD,"Button",BS_AUTORADIOBUTTON,105,59,35,10
     CONTROL         "Instant",IDC_YABS,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,159,31,39,10
     CONTROL         "Semi-Rel",IDC_YSEM,"Button",BS_AUTORADIOBUTTON,159,40,43,10
     CONTROL         "Relative",IDC_YREL,"Button",BS_AUTORADIOBUTTON,159,50,42,10
+    CONTROL         "",IDC_SLIDERX,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,102,68,49,11
+    CONTROL         "",IDC_SLIDERY,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,156,68,49,11
     PUSHBUTTON      "Hide...",IDC_MOREBUTTON0,101,82,105,11
     CONTROL         "L",IDC_CHECK_L,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,36,106,19,10
     CONTROL         "R",IDC_CHECK_R,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,103,106,21,10
@@ -299,8 +306,7 @@ BEGIN
     GROUPBOX        "Analog Stick",IDC_ANALOGSTICKLABEL,3,0,208,97
     CONTROL         "",IDC_STICKPIC,"Static",SS_OWNERDRAW,7,10,89,82,WS_EX_STATICEDGE
     GROUPBOX        "Buttons",IDC_BUTTONSLABEL,3,97,208,71
-    CONTROL         "Radial",IDC_XRAD,"Button",BS_AUTORADIOBUTTON,159,60,35,10
-    CONTROL         "Ang. Disp",IDC_CHECK_ANGDISP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,106,66,42,10
+    CONTROL         "Ang. Disp",IDC_CHECK_ANGDISP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,160,59,42,10
 END
 
 IDD_STATUS_13 DIALOGEX 0, 0, 216, 279
@@ -522,7 +528,7 @@ BEGIN
             VALUE "FileDescription", "TAS Input Plugin"
             VALUE "FileVersion", "0, 6, 0, 0"
             VALUE "InternalName", "TASDI"
-            VALUE "LegalCopyright", "Copyright © 2001 Def, 2006 Nitsuja"
+            VALUE "LegalCopyright", "Copyright Â© 2001 Def, 2006 Nitsuja"
             VALUE "OriginalFilename", "TASDI.dll"
             VALUE "ProductName", "  TASDI"
             VALUE "ProductVersion", "0, 6, 0, 0"
@@ -556,21 +562,6 @@ BEGIN
 END
 
 IDD_STATUS_23 AFX_DIALOG_LAYOUT
-BEGIN
-    0
-END
-
-IDD_STATUS_1 AFX_DIALOG_LAYOUT
-BEGIN
-    0
-END
-
-IDD_STATUS_12 AFX_DIALOG_LAYOUT
-BEGIN
-    0
-END
-
-IDD_MACRODLG AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
