--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -191,24 +191,26 @@ IDD_ADVANCED_OPTIONS DIALOGEX 0, 0, 231, 262
 STYLE DS_MODALFRAME | DS_SETFONT | WS_POPUP
 FONT 8, "Tahoma", 0, 0, 0
 {
-    GROUPBOX        "Common Options", IDC_COMMON, 7, 7, 215, 105
-    AUTOCHECKBOX    "Start game in full screen", IDC_STARTFULLSCREEN, 16, 20, 200, 10
-    AUTOCHECKBOX    "Pause emulation when window is not active", IDC_PAUSENOTACTIVE, 16, 35, 200, 10
-    AUTOCHECKBOX    "Use global plugins settings", IDC_PLUGIN_OVERWRITE, 16, 50, 200, 10
-    AUTOCHECKBOX    "Show toolbar", IDC_GUI_TOOLBAR, 16, 65, 200, 10
-    AUTOCHECKBOX    "Show statusbar", IDC_GUI_STATUSBAR, 16, 80, 200, 10
-    AUTOCHECKBOX    "Auto Increment save slot", IDC_AUTOINCSAVESLOT, 16, 95, 200, 10
-    GROUPBOX        "Compatibility Options", IDC_COMPATIBILITY, 7, 116, 215, 56
-    AUTOCHECKBOX    "No audio delay (it can fix some compatibility issues but audio won't be synchronised with video)", IDC_NO_AUDIO_DELAY, 16, 129, 200, 18, BS_VCENTER | BS_MULTILINE
-    AUTOCHECKBOX    "No compiled jump (improves compatibility at the cost of some speed)", IDC_NO_COMPILED_JUMP, 16, 150, 200, 18, BS_VCENTER | BS_MULTILINE
-    GROUPBOX        "ROM Browser Columns", IDC_ROMBROWSERCOLUMNS, 7, 176, 215, 73
-    AUTOCHECKBOX    "Good Name", IDC_COLUMN_GOODNAME, 16, 189, 100, 10
-    AUTOCHECKBOX    "Internal Name", IDC_COLUMN_INTERNALNAME, 16, 203, 100, 10
-    AUTOCHECKBOX    "Country", IDC_COLUMN_COUNTRY, 16, 217, 100, 10
-    AUTOCHECKBOX    "Size", IDC_COLUMN_SIZE, 16, 231, 100, 10
-    AUTOCHECKBOX    "Comments", IDC_COLUMN_COMMENTS, 120, 189, 100, 10
-    AUTOCHECKBOX    "File Name", IDC_COLUMN_FILENAME, 120, 203, 100, 10
-    AUTOCHECKBOX    "MD5", IDC_COLUMN_MD5, 120, 217, 100, 10
+    GROUPBOX        "Common Options", IDC_COMMON, 7, 7, 215, 60
+    AUTOCHECKBOX    "Start game in full screen", IDC_STARTFULLSCREEN, 16, 20, 100, 10
+    AUTOCHECKBOX    "Pause emulation when window is not active", IDC_PAUSENOTACTIVE, 16, 35, 100, 10
+    AUTOCHECKBOX    "Use global plugins settings", IDC_PLUGIN_OVERWRITE, 16, 50, 100, 10
+    AUTOCHECKBOX    "Show toolbar", IDC_GUI_TOOLBAR, 120, 20, 100, 10
+    AUTOCHECKBOX    "Show statusbar", IDC_GUI_STATUSBAR, 120, 35, 100, 10
+    AUTOCHECKBOX    "Auto Increment save slot", IDC_AUTOINCSAVESLOT, 120, 50, 100, 10
+    GROUPBOX        "Compatibility Options", IDC_COMPATIBILITY, 7, 71, 215, 56
+    AUTOCHECKBOX    "No audio delay (it can fix some compatibility issues but audio won't be synchronised with video)", IDC_NO_AUDIO_DELAY, 16, 84, 200, 18, BS_VCENTER | BS_MULTILINE
+    AUTOCHECKBOX    "No compiled jump (improves compatibility at the cost of some speed)", IDC_NO_COMPILED_JUMP, 16, 105, 200, 18, BS_VCENTER | BS_MULTILINE
+    GROUPBOX        "ROM Browser Columns", IDC_ROMBROWSERCOLUMNS, 7, 131, 215, 73
+    AUTOCHECKBOX    "Good Name", IDC_COLUMN_GOODNAME, 16, 144, 100, 10
+    AUTOCHECKBOX    "Internal Name", IDC_COLUMN_INTERNALNAME, 16, 158, 100, 10
+    AUTOCHECKBOX    "Country", IDC_COLUMN_COUNTRY, 16, 172, 100, 10
+    AUTOCHECKBOX    "Size", IDC_COLUMN_SIZE, 16, 186, 100, 10
+    AUTOCHECKBOX    "Comments", IDC_COLUMN_COMMENTS, 120, 144, 100, 10
+    AUTOCHECKBOX    "File Name", IDC_COLUMN_FILENAME, 120, 158, 100, 10
+    AUTOCHECKBOX    "MD5", IDC_COLUMN_MD5, 120, 172, 100, 10
+    GROUPBOX        "Wii VC Options", IDC_WIIVC_OPTIONS, 7, 208, 215, 50
+    AUTOCHECKBOX    "Round To Zero", IDC_ROUNDTOZERO, 16, 221, 100, 10
 }
 
 
