Move clear joystick button, fix m64 input display blinking

--- a/tasinput_plugin/src/config.rc
+++ b/tasinput_plugin/src/config.rc
@@ -171,7 +171,7 @@ BEGIN
     CONTROL         "Relative",IDC_YREL,"Button",BS_AUTORADIOBUTTON,159,50,42,10
     CONTROL         "",IDC_SLIDERX,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,102,68,49,11
     CONTROL         "",IDC_SLIDERY,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,156,68,49,11
-    PUSHBUTTON      "Hide...",IDC_MOREBUTTON0,101,82,105,11
+    PUSHBUTTON      "Hide...",IDC_MOREBUTTON0,155,82,51,11
     CONTROL         "L",IDC_CHECK_L,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,36,106,19,10
     CONTROL         "R",IDC_CHECK_R,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,103,106,21,10
     CONTROL         "Up",IDC_CHECK_DUP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,120,25,10
@@ -199,7 +199,7 @@ BEGIN
     PUSHBUTTON      "Import",IDC_IMPORT,156,315,51,14
     PUSHBUTTON      "Save",IDC_SAVE,156,333,51,14
     LTEXT           "Status: Idle",IDC_STATUS,8,183,143,11
-    PUSHBUTTON      "Clr.",IDC_CLEARJOY,77,86,19,10
+    PUSHBUTTON      "Clear",IDC_CLEARJOY,101,82,52,11
 END
 
 IDD_STATUS_2 DIALOGEX 0, 0, 216, 75
@@ -245,7 +245,7 @@ BEGIN
     CONTROL         "Relative",IDC_YREL,"Button",BS_AUTORADIOBUTTON,159,50,42,10
     CONTROL         "",IDC_SLIDERX,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,102,68,49,11
     CONTROL         "",IDC_SLIDERY,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,156,68,49,11
-    PUSHBUTTON      "Hide...",IDC_MOREBUTTON0,102,82,104,11
+    PUSHBUTTON      "Hide...",IDC_MOREBUTTON0,155,82,51,11
     CONTROL         "L",IDC_CHECK_L,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,36,106,19,10
     CONTROL         "R",IDC_CHECK_R,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,103,106,21,10
     CONTROL         "Up",IDC_CHECK_DUP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,120,25,10
@@ -269,7 +269,7 @@ BEGIN
     CONTROL         "",IDC_STICKPIC,"Static",SS_OWNERDRAW,7,10,89,82,WS_EX_STATICEDGE
     GROUPBOX        "Buttons",IDC_BUTTONSLABEL,3,97,208,71
     CONTROL         "Ang. Disp",IDC_CHECK_ANGDISP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,160,59,42,10
-    PUSHBUTTON      "Clr.",IDC_CLEARJOY,77,86,19,10
+    PUSHBUTTON      "Clear",IDC_CLEARJOY,101,82,52,11
 END
 
 IDD_STATUS_13 DIALOGEX 0, 0, 216, 279
@@ -308,7 +308,6 @@ BEGIN
     LTEXT           "Status: Idle",IDC_STATUS,8,110,143,11
     PUSHBUTTON      "Import",IDC_IMPORT,156,242,51,14
     PUSHBUTTON      "Save",IDC_SAVE,156,258,51,14
-    PUSHBUTTON      "Clr.",IDC_CLEARJOY,77,86,19,10
 END
 
 IDD_STATUS_3 DIALOGEX 0, 0, 216, 185
@@ -392,8 +391,8 @@ BEGIN
     GROUPBOX        "Analog Stick",IDC_ANALOGSTICKLABEL,3,0,208,97
     CONTROL         "",IDC_STICKPIC,"Static",SS_OWNERDRAW,7,10,89,82,WS_EX_STATICEDGE
     CONTROL         "Ang. Disp",IDC_CHECK_ANGDISP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,160,59,42,10
-    PUSHBUTTON      "More...",IDC_MOREBUTTON1,101,82,105,11
-    PUSHBUTTON      "Clr.",IDC_CLEARJOY,77,86,19,10
+    PUSHBUTTON      "More...",IDC_MOREBUTTON1,154,82,52,11
+    PUSHBUTTON      "Clear",IDC_CLEARJOY,101,82,52,11
 END
 
 
