Avoid double negatives in "Don't record resets"

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -193,7 +193,7 @@ BEGIN
     GROUPBOX        "Wii VC Options",IDC_WIIVC_OPTIONS,7,207,98,50
     CONTROL         "Round To Zero",IDC_ROUNDTOZERO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,221,75,10
     GROUPBOX        "Recording Options",IDC_RECORDINGOPT,112,207,110,50
-    CONTROL         "Don't record resets",IDC_NORESET,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,119,220,87,10
+    CONTROL         "Record resets",IDC_NORESET,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,119,220,87,10
 END
 
 IDD_AUDIT_ROMS_DIALOG DIALOGEX 0, 0, 183, 138
