--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -517,8 +517,9 @@ BEGIN
     EDITTEXT        IDC_MOVIE_CONTROLLER2_TEXT2,217,165,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     EDITTEXT        IDC_MOVIE_CONTROLLER3_TEXT2,217,176,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     EDITTEXT        IDC_MOVIE_CONTROLLER4_TEXT2,217,187,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    CONTROL         "From Snapshot",IDC_FROMSNAPSHOT_RADIO,"Button",BS_AUTORADIOBUTTON,211,116,64,10
-    CONTROL         "From Start",IDC_FROMSTART_RADIO,"Button",BS_AUTORADIOBUTTON,211,104,50,10
+    CONTROL         "From Snapshot",IDC_FROMSNAPSHOT_RADIO,"Button",BS_AUTORADIOBUTTON,211,107,64,10
+    CONTROL         "From Start",IDC_FROMSTART_RADIO,"Button",BS_AUTORADIOBUTTON,211,95,50,10
+    CONTROL         "From EEPROM",IDC_FROMEEPROM_RADIO,"Button",BS_AUTORADIOBUTTON,211,120,64,10
 END
 
 IDD_ROM_SETTING_DIALOG DIALOGEX 0, 0, 340, 305
@@ -702,6 +703,11 @@ BEGIN
 END
 
 IDD_MESSAGES AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_MOVIE_RECORD_DIALOG AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
